<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbarText"
    android:orientation="vertical"
    tools:context="com.zjl.mywechat.view.LoginActivity">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/loginground"
                android:textColor="#353535"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/defautfroud"
                android:textColor="#45c01a"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/et_usertel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/fx_bg_et"
                android:hint="@string/defaultusername"
                android:inputType="phone"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="@color/editin"
                android:textSize="@dimen/logintextsize"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_usertel"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:text="@string/defaultupnum"
                android:textColor="@color/logintitle"

                android:textSize="16sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/fx_bg_et"
                android:hint="@string/defaultpassowrd"
                android:inputType="textPassword"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="@color/editin"
                android:textSize="@dimen/logintextsize"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/password"
                android:textColor="@color/logintitle"
                android:textSize="16sp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/fx_bg_btn_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/login"
            android:textColor="@drawable/fx_login_btn_text_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_wenti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/loginquestion"
            android:textColor="@color/presstext"
            android:textSize="14sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_qtlogin"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="33dp"
            android:background="@drawable/fx_bg_btn_gray"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/logintextsize"/>


    </RelativeLayout>
</LinearLayout>
